--- a/React-Challenge-04/challenge-pluralize/src/components/ShoppingList/ShoppingList.css
+++ b/React-Challenge-04/challenge-pluralize/src/components/ShoppingList/ShoppingList.css
@@ -12,7 +12,7 @@
   font-size: 1.2rem;
   box-sizing: border-box;
   border-radius: 1rem;
-  border: 3px solid;
+  border: 3px solid gray;
   text-align: center;
   margin: 0 auto;
   padding: 0.5rem;
@@ -41,4 +41,8 @@
 .Summary {
   text-align: left;
   margin-left: 40px;
+}
+
+.FinalPrice {
+  font-size: 1.5rem;
 }
